--- a/.github/workflows/grafana_deploy.yml
+++ b/.github/workflows/grafana_deploy.yml
@@ -10,13 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: hashicorp/setup-terraform@v2
+      
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          cli_config_token: ${{ secrets.TF_API_TOKEN }}
       
       - name: Terraform Apply
         env:
-          GRAFANA_TOKEN: ${{ secrets.GRAFANA_TOKEN }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          TF_VAR_grafana_auth: ${{ secrets.GRAFANA_TOKEN }}
+          TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
         run: |
           cd grafana
           terraform init
-          terraform apply -auto-approve
+          terraform apply -auto-approve -input=false
