feat: add manual trigger

--- a/.github/workflows/grafana_deploy.yml
+++ b/.github/workflows/grafana_deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'grafana/**' # triggered if any modification at grafana/
+  workflow_dispatch:
 
 jobs:
   terraform:
