--- a/.github/workflows/grafana_deploy.yml
+++ b/.github/workflows/grafana_deploy.yml
@@ -19,9 +19,10 @@ jobs:
 
       - name: Terraform Apply
         env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
           TF_VAR_grafana_auth: ${{ secrets.GRAFANA_TOKEN }}
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
         run: |
           cd grafana
-          terraform init
+          terraform init -input=false
           terraform apply -auto-approve -input=false
