--- a/.github/workflows/grafana_deploy.yml
+++ b/.github/workflows/grafana_deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Terraform Apply
         env:
           TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
-          TF_VAR_grafana_auth: ${{ secrets.GRAFANA_TOKEN }}
+          TF_VAR_grafana_token: ${{ secrets.GRAFANA_TOKEN }}
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
         run: |
           cd grafana
